cluster-manifests/osm-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osm-system
  labels:
    app.kubernetes.io/name: osm-system
