cluster-manifests/osm-system/osm.yaml
apiVersion: v1
kind: Service
metadata:
  name: osm-controller
  namespace: osm-system
  labels:
    app: osm-controller
spec:
  ports:
    - name: osm-port
      port: 15128
      targetPort: 15128
    - name: sidecar-injector
      port: 9090
      targetPort: 9090
    - name: debug-port
      port: 9092
      targetPort: 9092
  selector:
    app: osm-controller
---
apiVersion: v1
kind: Service
metadata:
  name: osm-config-validator
  namespace: osm-system
  labels:
    app: osm-controller
spec:
  ports:
    - name: config-validator
      port: 9093
      targetPort: 9093
  selector:
    app: osm-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osm-controller
  namespace: osm-system
  labels:
    app: osm-controller
    meshName: osm
    enforceSingleMesh: "true"
    pci-scope: out-of-scope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osm-controller
      pci-scope: out-of-scope
  template:
    metadata:
      labels:
        app: osm-controller
        pci-scope: out-of-scope
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9091'
    spec:
      serviceAccountName: osm
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
        pci-scope: out-of-scope
      containers:
        - name: osm-controller
          image: mcr.microsoft.com/oss/openservicemesh/osm-controller:v0.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: "admin-port"
              containerPort: 15000
            - name: "osm-port"
              containerPort: 15128
            - name: "metrics"
              containerPort: 9091
          command: ['/osm-controller']
          args: [
            "--verbosity", "info",
            "--osm-namespace", "osm-system",
            "--mesh-name", "osm",
            "--init-container-image", "mcr.microsoft.com/oss/openservicemesh/init:v0.7.0",
            "--sidecar-image", "$(ACR_INSTANCE).azurecr.io/live/envoyproxy/envoy-alpine:v1.17.0",
            "--webhook-config-name", "osm-webhook-osm",
            "--ca-bundle-secret-name", "osm-ca-bundle",
            "--certificate-manager", "tresor"
          ]
          resources:
            limits:
              cpu: "1.5"
              memory: 256M
            requests:
              cpu: "0.5"
              memory: 32M
          readinessProbe:
            initialDelaySeconds: 1
            timeoutSeconds: 5
            httpGet:
              scheme: HTTP
              path: /health/ready
              port: 9091
          livenessProbe:
            initialDelaySeconds: 1
            timeoutSeconds: 5
            httpGet:
              scheme: HTTP
              path: /health/alive
              port: 9091
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: osm-controller
  name: osm-webhook-osm
webhooks:
- name: osm-inject.k8s.io
  clientConfig:
    service:
      name: osm-controller
      namespace: osm-system
      path: /mutate-pod-creation
      port: 9090
  # failurePolicy should always be set to Fail to ensure no new resources get created without a sidecar
  #   (and bypass TrafficTarget policies) if the webhook server is down
  failurePolicy: Fail
  matchPolicy: Exact
  namespaceSelector:
    matchLabels:
      openservicemesh.io/monitored-by: osm
    matchExpressions:
      # This label is explicitly set to ignore a namespace
      - key: "openservicemesh.io/ignore"
        operator: DoesNotExist
      # Ensure pods in system/control plane namespaces are never injected with a sidecar
      - key: "name"
        operator: NotIn
        values:
        - cluster-baseline-settings
        - falco-system
        - flux-system
        - ingress-nginx
        - gatekeeper-system
        - kube-node-lease
        - kube-public
        - kube-system
        - osm-system
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - CREATE
      resources:
        - pods
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: osm-controller
  name: osm-webhook-osm
webhooks:
- name: osm-config-webhook.k8s.io
  clientConfig:
    service:
      name: osm-config-validator
      namespace: osm-system
      path: /validate-webhook
      port: 9093
  failurePolicy: Fail
  matchPolicy: Exact
  namespaceSelector:
    matchLabels:
      name: osm-system
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - configmaps
